# cram-js

./: .babelrc  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .nycrc  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CODEC_SUPPORT.md  FAILED_OPTIMIZATIONS.md  HG002_ANALYSIS.md  INIT5_FAILED.md  LICENSE  NEXT_OPTIMIZATIONS.md  NEXT_STEPS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_INIT3.md  OPTIMIZATION_INIT6.md  OPTIMIZATION_INIT7.md  OPTIMIZATION_SESSION_SUMMARY.md  PROFILE_ANALYSIS_2025.md  README-BENCHMARKING.md  README.md  analyze-profile.mjs  compare-branches.sh  compare-d04-optimization.mjs  compare-init2-init3.sh  compare-lazy-fc.mjs  compare-multiple-runs.sh  compare-profiles.mjs  compare-results.mjs  compare-workloads.mjs  eslint.config.mjs  jest.config.js  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  (+11 more)
benchmarks/: benchmark-runner.mjs  benchmark.ts  compare-two-branches.sh  compare-with-hyperfine.sh  cram.bench.ts  profile-detailed.js  profile.ts  readname.bench.ts
crate/: Cargo.toml  package.json  webpack.config.js
crate/src/: lib.rs  wrapper.js
docs/: CODEC_SUPPORT.md
example/: data.js  index-debug.html  index.html
htscodecs-wasm/: build.sh  bz2_wrapper.c  config.h  cram_codecs.c  htscodecs.cjs.js  htscodecs.esm.js  htscodecs.js  itf8_batch.c  package.json  update-htscodecs.sh  version.h  zlib_wrapper.c
investigation/: BUG-FIX-UNMAPPED-READS.md  CRAM-SPEC-SUMMARY.md  DUMPFILE-FIX-2025-11-19.md  FIXES-2025-11-19.md  FIXES-APPLIED.md  README.md  SUCCESS-SUMMARY.md  bug-fix-summary.txt  detailed-discrepancies.txt  (+3 more)
(+900 files in other folders)
