[package]
name = "inflate-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM-based zlib/gzip decompression"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
libdeflater = { version = "1.0", features = ["freestanding"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.libdeflater]
opt-level = 3
